--- a/src/less/main.less
+++ b/src/less/main.less
@@ -40,10 +40,11 @@ body,
         justify-content: space-between;
         flex-direction: column;
         height: 100%;
-        background-color: @defaultAllBgColor;
+        background: linear-gradient(#2A2838, #292736, #282634, #272532, #262430, #25242E, #222229, #212127, #1F1F23)
     }
     .login-form {
         // height: 440px;
+        margin: 0 auto;
         margin-bottom: 84px;
         color: @defaultTextColor;
         font-size: 28px;
@@ -99,6 +100,13 @@ img,
 form,
 input,
 #app {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
+}
+
+ul,
+li {
+    padding: 0;
+    margin: 0;
+    list-style: none
 }
