--- a/src/less/main.less
+++ b/src/less/main.less
@@ -68,7 +68,7 @@ body,
                 outline: none;
                 border: 1px solid transparent;
                 border-radius: 5px;
-                padding-left: 60px; // color: @defaultTextColor;
+                padding-left: 80px; // color: @defaultTextColor;
                 background-color: @deaultInputBgColor;
             }
         }
@@ -174,7 +174,8 @@ li {
     margin-bottom: 1.38667rem;
 }
 
-.my-vehicle .van-pull-refresh, .friend .van-pull-refresh{
+.my-vehicle .van-pull-refresh,
+.friend .van-pull-refresh {
     margin-top: 1.18rem
 }
 
@@ -184,6 +185,10 @@ li {
 
 .van-nav-bar--fixed {
     position: fixed !important;
+}
+
+.had {
+    margin-top: 1.18rem;
 }
 
 .reserve {
@@ -203,6 +208,7 @@ li {
 
 .vehicle-list-body-status {
     width: 120px;
+    margin: 0 auto;
     >span {
         display: block;
         width: 100%;
