--- a/src/less/main.less
+++ b/src/less/main.less
@@ -11,6 +11,8 @@ html,
 body,
 #app {
     font-family: PingFangSC-Regular;
+    font-size: 28px;
+    color: #383B41;
     height: 100%; // width: 750px; 
     background-color: #FAFBFC;
     .defaultColor {
@@ -71,9 +73,6 @@ body,
                 padding-left: 80px; // color: @defaultTextColor;
                 background-color: @deaultInputBgColor;
             }
-        }
-        >.password {
-            // margin-top: 30px;
         }
         &-button {
             height: 88px;
@@ -219,4 +218,12 @@ li {
         text-align: center; // background-color: #fff4e6;
         // color: #fdc27a;
     }
+}
+
+.z-f {
+    z-index: 3000;
+}
+
+img {
+    border: 0
 }
