--- a/src/less/icon.css
+++ b/src/less/icon.css
@@ -210,7 +210,7 @@
     text-align: center;
 }
 
-.van-toast {
+/* .van-toast {
     font-size: 0.38667rem !important;
     line-height: 0.66667rem !important;
-}
+} */
