--- a/src/less/main.less
+++ b/src/less/main.less
@@ -206,9 +206,10 @@ li {
 }
 
 .vehicle-list-body-status {
-    width: 120px;
+    min-width: 120px;
     margin: 0 auto;
     >span {
+        padding:0px 5px;
         display: block;
         width: 100%;
         height: 44px;
