--- a/src/less/main.less
+++ b/src/less/main.less
@@ -209,9 +209,8 @@ li {
     min-width: 120px;
     margin: 0 auto;
     >span {
-        padding:0px 5px;
-        display: block;
-        width: 100%;
+        padding: 0px 5px;
+        display: block; // width: 100%;
         height: 44px;
         font-size: 26px;
         border-radius: 22px;
