--- a/src/less/main.less
+++ b/src/less/main.less
@@ -128,46 +128,46 @@ li {
     list-style: none
 }
 
-// vatui 
-.van-pull-refresh__head {
-    //下拉刷新 头部
-    width: 100%;
-    height: 0.66667rem;
-    left: 0;
-    overflow: hidden;
-    position: absolute;
-    text-align: center;
-    top: -1rem;
-    font-size: 32px;
-    color: #969799;
-    line-height: 0.66667rem;
-}
+// // vatui 
+// .van-pull-refresh__head {
+//     //下拉刷新 头部
+//     width: 100%;
+//     height: 0.66667rem;
+//     left: 0;
+//     overflow: hidden;
+//     position: absolute;
+//     text-align: center;
+//     top: -1rem;
+//     font-size: 32px;
+//     color: #969799;
+//     line-height: 0.66667rem;
+// }
 
-.van-pull-refresh__loading .van-loading {
-    //下拉刷新加载框
-    width: .51333rem;
-    height: .51333rem;
-    margin-right: 0.06667rem;
-}
+// .van-pull-refresh__loading .van-loading {
+//     //下拉刷新加载框
+//     width: .51333rem;
+//     height: .51333rem;
+//     margin-right: 0.06667rem;
+// }
 
-// 上拉加载更多
-.van-list__finished-text,
-.van-list__loading-text {
-    color: #969799;
-    font-size: 32px;
-    line-height: 0.66667rem;
-    text-align: center;
-}
+// // 上拉加载更多
+// .van-list__finished-text,
+// .van-list__loading-text {
+//     color: #969799;
+//     font-size: 32px;
+//     line-height: 0.66667rem;
+//     text-align: center;
+// }
 
-.van-loading {
-    width: 0.8rem;
-    height: 0.8rem;
-    z-index: 0;
-    font-size: 0;
-    line-height: 0;
-    position: relative;
-    vertical-align: middle;
-}
+// .van-loading {
+//     width: 0.8rem;
+//     height: 0.8rem;
+//     z-index: 0;
+//     font-size: 0;
+//     line-height: 0;
+//     position: relative;
+//     vertical-align: middle;
+// }
 
 .footer-height .van-pull-refresh {
     margin-bottom: 1.38667rem;
