--- a/src/less/main.less
+++ b/src/less/main.less
@@ -128,6 +128,16 @@ li {
     list-style: none
 }
 
+.but {
+    outline: none;
+    background: linear-gradient(#f5e9c8, #e7ce97);
+    color: #52320d;
+    width: 570px;
+    text-indent: 10px;
+    letter-spacing: 10px;
+    height: 88px;
+}
+
 // // vatui 
 // .van-pull-refresh__head {
 //     //下拉刷新 头部
@@ -142,14 +152,12 @@ li {
 //     color: #969799;
 //     line-height: 0.66667rem;
 // }
-
 // .van-pull-refresh__loading .van-loading {
 //     //下拉刷新加载框
 //     width: .51333rem;
 //     height: .51333rem;
 //     margin-right: 0.06667rem;
 // }
-
 // // 上拉加载更多
 // .van-list__finished-text,
 // .van-list__loading-text {
@@ -158,7 +166,6 @@ li {
 //     line-height: 0.66667rem;
 //     text-align: center;
 // }
-
 // .van-loading {
 //     width: 0.8rem;
 //     height: 0.8rem;
@@ -168,7 +175,6 @@ li {
 //     position: relative;
 //     vertical-align: middle;
 // }
-
 .footer-height .van-pull-refresh {
     margin-bottom: 1.38667rem;
 }
@@ -179,7 +185,7 @@ li {
 }
 
 .v-use .van-pull-refresh {
-    margin-top: ceil(88px+88px)
+    margin-top: ceil(88px)
 }
 
 .van-nav-bar--fixed {
@@ -187,7 +193,7 @@ li {
 }
 
 .had {
-    margin-top: 1.18rem;
+    padding-top: 1.18rem;
 }
 
 .reserve {
