--- a/src/less/main.less
+++ b/src/less/main.less
@@ -137,7 +137,9 @@ li {
     letter-spacing: 10px;
     height: 88px;
 }
-
+.van-list{
+    min-height: 500px;
+}
 // // vatui 
 // .van-pull-refresh__head {
 //     //下拉刷新 头部
